@@ -11,6 +11,13 @@ Marcelo Vanzin, Jesse Pavel, Bernhard Walle and Jakub Roztočil for
 contributing to this release.
 
 {{{ Bug fixes
+- Fixed an exception when trying to add new menu items to the context menu
+  if some ActionSets have been unloaded (plugin deactivation)
+  (Matthieu Casanova #3071355)
+
+- Fixed an exception when clicking ok while adding new action to the context
+  menu if no action has been selected (Matthieu Casanova #3072546)
+
 - Fixed TextArea.selectBlock() when the block is at offset 0
   (Jesse Pavel #3062072)
 
